--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "mayurmalaviya1997",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3"
   }
